--- a/nut/conf/sm2_mu_rev_d.conf
+++ b/nut/conf/sm2_mu_rev_d.conf
@@ -2,29 +2,17 @@ PLATFORM = "SM2_MU"
 PLATFORM_SUB = "REV_D"
 NUT_INIT_BOARD = ""
 M68K_GCC_CS = ""
-LDSCRIPT = "mcf5225x_512_rom"
+LDSCRIPT = "m5225x_512_rom_512_extram_boot"
 MCU_MCF52259 = ""
 NUTMEM_STACKHEAP = ""
 DEBUG_USE_UART = "DEV_UART2"
-UART0_INIT_BAUDRATE = "32000"
-UART0_INIT_DUPLEX = "HALF"
-UART0_XONXOFF = ""
-UART0_HDX_CTRL = ""
-UART0_HDX_CTRL_INV = ""
-UART0_HDX_CTRL_PORT = "PORTAN"
-UART0_HDX_CTRL_PIN = "5"
-UART0_RS485_CTRL = ""
-UART0_RS485_CTRL_DE_PORT = "PORTUA"
-UART0_RS485_CTRL_DE_PIN = "3"
-UART0_RS485_CTRL_RE_PORT = "PORTUA"
-UART0_RS485_CTRL_RE_PIN = "2"
 NUT_THREAD_IDLESTACK = "512"
 NUT_THREAD_MAINSTACK = "1024"
+CONFOS_EE_OFFSET = "0"
 MAX_HOSTNAME_LEN = "15"
-NUT_CONFIG_AT24 = ""
-NUT_CONFIG_AT24_ADR = "0x57"
-AT24C_CHIP_SIZE = "32768"
-AT24C_ADR_SIZE = "2"
-AT24C_ROW_SIZE = "64"
+NUT_CONFIG_M24AA256 = ""
+I2C_SLA_24AA256 = "0x57"
+I2C_SLA_FM24CL64 = "0x53"
 FOPEN_MAX = "16"
 CRT_UNSETENV_POSIX = ""
+CONFNET_NVMEM = ""
