--- a/.cproject
+++ b/.cproject
@@ -3,7 +3,21 @@
 	<storageModule moduleId="org.eclipse.cdt.core.settings">
 		<cconfiguration id="cdt.managedbuild.toolchain.gnu.cross.base.1052330264">
 			<storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="cdt.managedbuild.toolchain.gnu.cross.base.1052330264" moduleId="org.eclipse.cdt.core.settings" name="Default">
-				<externalSettings/>
+				<externalSettings>
+					<externalSetting>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="includePath" name="/nut_5.0.5/nutbld/include"/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="includePath" name="/nut_5.0.5/nut/include"/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="libraryPath" name="/nut_5.0.5/nutbld/lib"/>
+						<entry flags="" kind="libraryFile" name="nutarch"/>
+						<entry flags="" kind="libraryFile" name="nutcrt"/>
+						<entry flags="" kind="libraryFile" name="nutdev"/>
+						<entry flags="" kind="libraryFile" name="nutfs"/>
+						<entry flags="" kind="libraryFile" name="nutnet"/>
+						<entry flags="" kind="libraryFile" name="nutos"/>
+						<entry flags="" kind="libraryFile" name="nutpro"/>
+						<entry flags="" kind="libraryFile" name=":nutinit.o"/>
+					</externalSetting>
+				</externalSettings>
 				<extensions>
 					<extension id="org.eclipse.cdt.core.GmakeErrorParser" point="org.eclipse.cdt.core.ErrorParser"/>
 					<extension id="org.eclipse.cdt.core.CWDLocator" point="org.eclipse.cdt.core.ErrorParser"/>
