--- a/.cproject
+++ b/.cproject
@@ -8,6 +8,7 @@
 						<entry flags="VALUE_WORKSPACE_PATH" kind="includePath" name="/nut_5.0.5/nutbld/include"/>
 						<entry flags="VALUE_WORKSPACE_PATH" kind="includePath" name="/nut_5.0.5/nut/include"/>
 						<entry flags="VALUE_WORKSPACE_PATH" kind="libraryPath" name="/nut_5.0.5/nutbld/lib"/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="libraryPath" name="/nut_5.0.5/nut/arch/m68k/coldfire/ldscripts"/>
 						<entry flags="" kind="libraryFile" name="nutarch"/>
 						<entry flags="" kind="libraryFile" name="nutcrt"/>
 						<entry flags="" kind="libraryFile" name="nutdev"/>
@@ -34,7 +35,7 @@
 							<option id="cdt.managedbuild.option.gnu.cross.prefix.1001075167" name="Prefix" superClass="cdt.managedbuild.option.gnu.cross.prefix"/>
 							<option id="cdt.managedbuild.option.gnu.cross.path.567275512" name="Path" superClass="cdt.managedbuild.option.gnu.cross.path"/>
 							<targetPlatform archList="all" binaryParser="org.eclipse.cdt.core.ELF" id="cdt.managedbuild.targetPlatform.gnu.cross.1232390101" isAbstract="false" osList="all" superClass="cdt.managedbuild.targetPlatform.gnu.cross"/>
-							<builder id="cdt.managedbuild.builder.gnu.cross.1405291237" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="Gnu Make Builder" superClass="cdt.managedbuild.builder.gnu.cross"/>
+							<builder arguments="cs-make -C nutbld" command="echo" id="cdt.managedbuild.builder.gnu.cross.1405291237" incrementalBuildTarget="all install" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="Gnu Make Builder" parallelBuildOn="false" parallelizationNumber="4" superClass="cdt.managedbuild.builder.gnu.cross"/>
 							<tool id="cdt.managedbuild.tool.gnu.cross.c.compiler.911948093" name="Cross GCC Compiler" superClass="cdt.managedbuild.tool.gnu.cross.c.compiler">
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1327491296" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
