- rozsahle zmeny ve strukture (oprava jmen souboru a funkci, aby to bylo cele sjednocene) - ted uz je kompilovatelny i MCF5225
git-svn-id: https://192.168.1.52/svn/svn/shared/nut_5.0.5/trunk/nut_5.0.5@5832 e18dba81-b7be-514b-945f-45d19d31607d

--- a/nut/conf/sm2_mu_rev_c.conf
+++ b/nut/conf/sm2_mu_rev_c.conf
@@ -2,7 +2,7 @@ PLATFORM = "SM2_MU"
 PLATFORM_SUB = "REV_C"
 NUT_INIT_BOARD = ""
 M68K_GCC_CS = ""
-LDSCRIPT = "mcf5225x_512_rom"
+LDSCRIPT = "mcf5225_512_rom"
 MCU_MCF52259 = ""
 NUTMEM_STACKHEAP = ""
 I2C0_AS_DEFAULT = ""
