--- a/nut/conf/sm2_mu_rev_d.conf
+++ b/nut/conf/sm2_mu_rev_d.conf
@@ -2,9 +2,13 @@ PLATFORM = "SM2_MU"
 PLATFORM_SUB = "REV_D"
 NUT_INIT_BOARD = ""
 M68K_GCC_CS = ""
-LDSCRIPT = "mcf5225x_512_rom_512_extram_boot"
+LDSCRIPT = "mcf5225_512_rom_512_extram"
 MCU_MCF52259 = ""
+NUTMEM_SPLIT_FAST = ""
 NUTMEM_STACKHEAP = ""
+NUTMEM_STACKHEAP_ALLOW_EXTRAM = ""
+NUTMEM_STACKHEAP_LIMIT = "10000"
+NUTMEM_SPLIT_FAST = ""
 NUT_THREAD_IDLESTACK = "512"
 NUT_THREAD_MAINSTACK = "1024"
 MAX_HOSTNAME_LEN = "15"
