- dotazena konfigurace CNka, bylo to takove divoke - inicializace mcf51 nahrazena inicializaci mcf51cn, protoze option a config registy CN a QE procesoru se dost lisi a inicializace nebude stejna - COP driver presunut z mcf51 do mcf51cn, protoze v QE je trochu jiny
git-svn-id: https://192.168.1.52/svn/svn/shared/nut_5.0.5/trunk/nut_5.0.5@5836 e18dba81-b7be-514b-945f-45d19d31607d

--- a/nut/conf/sm2_rm.conf
+++ b/nut/conf/sm2_rm.conf
@@ -3,6 +3,7 @@ M68K_GCC_CS = ""
 LDSCRIPT = "mcf51cn_128_rom"
 MCU_MCF51CN128 = ""
 NUT_WDT_ENABLE = ""
+NUT_LVD_ENABLE = ""
 MCG_BUS_DIV = "1"
 MCG_MODE_PEE = ""
 MCG_INT_REF_CLKEN = ""
