--- a/nut/conf/sm2_rm_gsm_ppp.conf
+++ b/nut/conf/sm2_rm_gsm_ppp.conf
@@ -1,7 +1,9 @@
 PLATFORM = "POWERNET_MOD"
+PLATFORM_SUB = "SM2_RM_GSM_PPP"
 M68K_GCC_CS = ""
 LDSCRIPT = "mcf51cn_128_rom"
 MCU_MCF51CN128 = ""
+NUT_WDT_ENABLE = ""
 MCG_BUS_DIV = "1"
 MCG_MODE_PEE = ""
 MCG_INT_REF_CLKEN = ""
@@ -11,7 +13,6 @@ MCG_EXT_REF_FREQ = "25000000"
 MCG_EXT_REF_CLKEN = ""
 MCG_EXT_REF_DIVIDE_FACTOR = "16"
 MCG_PLL_MULTIPLY_FACTOR = "32"
-NUT_WDT_ENABLE = ""
 SCI1_TXD_PORTPIN = "PTD0"
 SCI1_RXD_PORTPIN = "PTD1"
 SCI2_TXD_PORTPIN = "PTD2"
