Portace procesoru MCF52259x pro SM2-MU a SM2-basemon MOD: FEC universal driver ADD: Fixed QSPI driver - not tested ADD: Fixed I2C driver - TODO pouzit universal driver ADD: Drivery externich zarizeni komunikujicich pres I2C, fix i universal driver FIX: GPIO driver FIX: inicializace pro MCF52259x ADD: Interrupty
git-svn-id: https://192.168.1.52/svn/svn/shared/nut_5.0.5/trunk/nut_5.0.5@5947 e18dba81-b7be-514b-945f-45d19d31607d

--- a/nut/conf/sm2_mu_rev_d.conf
+++ b/nut/conf/sm2_mu_rev_d.conf
@@ -2,7 +2,7 @@ PLATFORM = "SM2_MU"
 PLATFORM_SUB = "REV_D"
 NUT_INIT_BOARD = ""
 M68K_GCC_CS = ""
-LDSCRIPT = "mcf5225_512_rom_512_extram"
+LDSCRIPT = "mcf5225_512_rom_512_extram_boot"
 MCU_MCF52259 = ""
 NUTMEM_SPLIT_FAST = ""
 NUTMEM_STACKHEAP = ""
@@ -10,7 +10,11 @@ NUTMEM_STACKHEAP_ALLOW_EXTRAM = ""
 NUTMEM_STACKHEAP_LIMIT = "10000"
 NUTMEM_SPLIT_FAST = ""
 NUT_THREAD_IDLESTACK = "512"
-NUT_THREAD_MAINSTACK = "1024"
+NUT_THREAD_MAINSTACK = "3072"
 MAX_HOSTNAME_LEN = "15"
+I2C_SLA_24AA256 = "0x57"
+I2C_SLA_FM24CL64 = "0x53"
 FOPEN_MAX = "16"
 CRT_UNSETENV_POSIX = ""
+NUT_THREAD_TCPSMSTACK = "2048"
+TCP_BACKLOG_MAX = "8"
