MOD: configurace pro sm2-rm_release v 1.0.3b17.elf
git-svn-id: https://192.168.1.52/svn/svn/shared/nut_5.0.5/trunk/nut_5.0.5@5955 e18dba81-b7be-514b-945f-45d19d31607d

--- a/nut/conf/sm2_rm_gsm_ppp.conf
+++ b/nut/conf/sm2_rm_gsm_ppp.conf
@@ -19,7 +19,7 @@ SCI2_TXD_PORTPIN = "PTD2"
 SCI2_RXD_PORTPIN = "PTD3"
 SCI3_TXD_PORTPIN = "PTE6"
 NUT_THREAD_IDLESTACK = "256"
-NUT_THREAD_MAINSTACK = "1100"
+NUT_THREAD_MAINSTACK = "1500"
 MAX_HOSTNAME_LEN = "15"
 NUTDEBUG = ""
 NUTDEBUG_CHECK_STACK = ""
@@ -33,6 +33,7 @@ TCP_COLLECT_SLIMIT = "256"
 TCP_BACKLOG_MAX = "0"
 TCP_BACKLOG_TIME = "5"
 NUT_THREAD_PPPSMSTACK = "1024"
+DHCP_DEFAULT_LEASE = "28800"
 HTTP_MEDIATYPE_CSS = ""
 HTTP_MEDIATYPE_GIF = ""
 HTTP_MEDIATYPE_JS = ""
