--- a/nut/conf/poseidon.conf
+++ b/nut/conf/poseidon.conf
@@ -1,8 +1,7 @@
-PLATFORM = "SM2_MU"
-PLATFORM_SUB = "REV_D"
+PLATFORM = "POSEIDON"
 NUT_INIT_BOARD = ""
 M68K_GCC_CS = ""
-LDSCRIPT = "mcf5225_512_rom_512_extram_boot_driver"
+LDSCRIPT = "mcf5225_512_rom_512_extram_boot"
 MCU_MCF52259 = ""
 NUTMEM_SPLIT_FAST = ""
 NUTMEM_STACKHEAP = ""
@@ -12,11 +11,8 @@ NUTMEM_SPLIT_FAST = ""
 NUT_THREAD_IDLESTACK = "512"
 NUT_THREAD_MAINSTACK = "3072"
 MAX_HOSTNAME_LEN = "15"
-NUT_CONFIG_M24AA256 = ""
-I2C_SLA_24AA256 = "0x57"
-I2C_SLA_FM24CL64 = "0x53"
+NUT_CONFIG_AT24_ADR = "0x51"
 FOPEN_MAX = "16"
 CRT_UNSETENV_POSIX = ""
 NUT_THREAD_TCPSMSTACK = "2048"
 TCP_BACKLOG_MAX = "8"
-DHCP_DEFAULT_LEASE = "28800"
