--- a/nut/conf/sm2-ad_pc_di.conf
+++ b/nut/conf/sm2-ad_pc_di.conf
@@ -1,5 +1,5 @@
 PLATFORM = "SM2_AD_PC"
-PLATFORM_SUB = "SM2_AD"
+PLATFORM_SUB = "SM2_AD_PC"
 M68K_GCC_CS = ""
 LDSCRIPT = "mcf51qe_128_rom"
 MCU_MCF51QE128 = ""
