MOD: merge Nut/net z hlavni vetve
git-svn-id: https://192.168.1.52/svn/svn/shared/nut_5.0.5/trunk/nut_5.0.5@6223 e18dba81-b7be-514b-945f-45d19d31607d

--- a/nut/net/Makefile
+++ b/nut/net/Makefile
@@ -38,7 +38,7 @@ top_srcdir = ..
 top_blddir = ..
 
 LIBDIR = $(top_blddir)/lib
-include $(top_srcdir)/UserConf.mk
+include $(top_srcdir)/NutConf.mk
 include $(top_srcdir)/Makedefs
 
 SRC1 =  tcpsock.c tcpsm.c tcpin.c tcpout.c tcputil.c \
