MOD: zvetsini PPPsm stacku na 1024 MOD: pokud prijde IPCP CONFREQ bez options, tak poslat NAK na neexistujici promenne MOD: zmena ASYNC MAP pro ppp remote pouze na default (0x000A0000, t.j. escapovani pro XON, XOFF) FIX: oprava NutIpRouteDel (spatne napsany kod, padalo to)
git-svn-id: https://192.168.1.52/svn/svn/shared/nut_5.0.5/trunk/nut_5.0.5@6685 e18dba81-b7be-514b-945f-45d19d31607d

--- a/nut/conf/sm2_mu_rev_f.conf
+++ b/nut/conf/sm2_mu_rev_f.conf
@@ -19,4 +19,5 @@ FOPEN_MAX = "20"
 CRT_UNSETENV_POSIX = ""
 NUT_THREAD_TCPSMSTACK = "2048"
 TCP_BACKLOG_MAX = "8"
+NUT_THREAD_PPPSMSTACK = "1024"
 DHCP_DEFAULT_LEASE = "28800"
