MOD: DHCP protocol reconfigured. MIN_DHCP_WAIT defined to 500ms instead of default value 4000ms. MOD: TTL sets to 0x40 instead 0x1 for broadcasting except IGMP protocol. MOD: DHCP state REQUESTING uncommented to fix DHCP standard packets exchange(discover/offer/request/ack)
git-svn-id: https://192.168.1.52/svn/svn/shared/nut_5.0.5/trunk/nut_5.0.5@6776 e18dba81-b7be-514b-945f-45d19d31607d

--- a/nut/conf/sm2_mu_rev_f.conf
+++ b/nut/conf/sm2_mu_rev_f.conf
@@ -20,4 +20,5 @@ CRT_UNSETENV_POSIX = ""
 NUT_THREAD_TCPSMSTACK = "2048"
 TCP_BACKLOG_MAX = "8"
 NUT_THREAD_PPPSMSTACK = "1024"
+MIN_DHCP_WAIT = "500"
 DHCP_DEFAULT_LEASE = "28800"
