MOD: povoleni floatu pro solar monitor MOD: vraceni MIN_DHCP_WAIT na default MOD: upravene putf, tak aby Nut pouzil spravnou funkci pri praci s floatem u Solar Monitoru
git-svn-id: https://192.168.1.52/svn/svn/shared/nut_5.0.5/trunk/nut_5.0.5@7017 e18dba81-b7be-514b-945f-45d19d31607d

--- a/nut/conf/sm2_mu_rev_f.conf
+++ b/nut/conf/sm2_mu_rev_f.conf
@@ -15,10 +15,10 @@ MAX_HOSTNAME_LEN = "15"
 NUT_CONFIG_M24AA256 = ""
 I2C_SLA_24AA256 = "0x57"
 I2C_SLA_FM24CL64 = "0x53"
+STDIO_FLOATING_POINT = ""
 FOPEN_MAX = "20"
 CRT_UNSETENV_POSIX = ""
 NUT_THREAD_TCPSMSTACK = "2048"
 TCP_BACKLOG_MAX = "8"
 NUT_THREAD_PPPSMSTACK = "1024"
-MIN_DHCP_WAIT = "500"
 DHCP_DEFAULT_LEASE = "28800"
